--- a/project-manager.html
+++ b/project-manager.html
@@ -40,8 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.crelate.com/portal/sizemorecompany/job/6oguzno7q9jc6kdm6w9kycr7cw'>Mechanical Project Manager | The Premier Resources Group</a></h5> 
+<p><span class="badge badge-light">Cincinnati, OH  Cincinnati Columbus, Ohio Cincinnati</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://netimpactstrategies.applytojob.com/apply/WYX037jop6/Project-Manager-Portfolio-Management'>Project Manager - Portfolio Management - NetImpact Strategies - Career Page</a></h5> 
+<p><span class="badge badge-light">San Antonio, TX</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://www.volvogroup.com/en-en/careers/job-listing/100267BR.html'>Public Project Manager G?teborg</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Brazil France</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/servicenow/job/o5prbfwQ'>ServiceNow Careers - Principal Program Manager, Veteran Programs</a></h5> 
@@ -150,7 +158,7 @@
 <p><span class="badge badge-light">Hyderabad, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.devex.com/jobs/aba-roli-program-manager-asia-pacific-652823'>ABA ROLI Program Manager, Asia/Pacific | Devex </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.devex.com/jobs/aba-roli-program-manager-asia-pacific-652823'>ABA ROLI Program Manager, Asia/Pacific | Devex </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -226,7 +234,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://ncianato.referrals.selectminds.com/jobs/senior-project-manager-cyber-security-761'>Senior Project Manager (Cyber Security) - NATO Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ncianato.referrals.selectminds.com/jobs/senior-project-manager-cyber-security-761'>Senior Project Manager (Cyber Security) - NATO Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -238,11 +246,11 @@
 <p><span class="badge badge-light">North America Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/p3-americas/job/oJlsbfwr'>umlaut North America Careers - Project Manager Operations (PMO)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/p3-americas/job/oJlsbfwr'>umlaut North America Careers - Project Manager Operations (PMO)</a></h5> 
 <p><span class="badge badge-light">North America Montreal Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/p3-americas/job/oWlsbfwE'>umlaut North America Careers - Quality Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/p3-americas/job/oWlsbfwE'>umlaut North America Careers - Quality Project Manager</a></h5> 
 <p><span class="badge badge-light">North America Montreal Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -286,7 +294,7 @@
 <p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.hrc.pdx.edu/postings/31425'>Portland State Careers | Assistant Program Manager, Center for Entrepreneurship</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.hrc.pdx.edu/postings/31425'>Portland State Careers | Assistant Program Manager, Center for Entrepreneurship</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -358,6 +366,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
+<h5><a href='https://georgetown.wd1.myworkdayjobs.com/en-US/Georgetown_Admin_Careers/job/Medical-Center/Senior-Program-Manager--Center-for-Global-Health-and-Quality-Georgetown-University-Medical-Center_JR07885'>Senior Program Manager, Center for Global Health and Quality ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>2 days ago ... Assembles and formats data for presentation to internal and external audiences. 
+Participates in national and international meetings. Develops research reports?...</p>
+<hr/>
 <h5><a href='https://uth.referrals.selectminds.com/jobs/senior-program-manager-academic-and-student-success-6221'>Senior Program Manager, Academic and Student Success - UTHealth Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
@@ -390,7 +403,7 @@
 <p><span class="badge badge-light">United States New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://inovabusiness.recruitee.com/o/project-manager-1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://inovabusiness.recruitee.com/o/project-manager-1'>
       Project Manager - INOVA+
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -432,19 +445,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698487339-project-manager'>Bosch Group Project Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/newengen/jobs/4500278002'>Job Application for Software Engineering Project Manager at New Engen</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/spin/e2fa791f-1c1b-4c48-9960-ae2999bbbbef'>Spin - Project Manager</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
